--- a/论文笔记/综述总结.md
+++ b/论文笔记/综述总结.md
@@ -4,7 +4,7 @@
 
 第一个生成由医生撰写的真正自然报告的工作，这些报告通常很长并且涵盖不同的主题。
 
-![image-20230713161255047](/home/zgs/.config/Typora/typora-user-images/image-20230713161255047.png)
+![image-20230713161255047](../image/image-20230713161255047.png)
 
 提出了一种具有共同注意力的多任务分层模型，用于自动预测关键字并生成长段落。给定一个被划分为多个区域的图像，我们使用 CNN 来学习这些补丁的视觉特征。然后，这些视觉特征被输入到多标签分类（MLC）网络中以预测相关标签。在标签词汇表中，每个标签都由一个词嵌入向量表示。给定特定图像的预测标签，它们的词嵌入向量充当该图像的语义特征。然后，将视觉特征和语义特征输入到共同注意模型中，以生成上下文向量，同时捕获该图像的视觉和语义信息。至此，编码过程就完成了。接下来，从上下文向量开始，解码过程生成文本描述。
 
@@ -22,7 +22,7 @@
 
 2.Hybrid Retrieval-Generation Reinforced Agent for Medical Image Report Generation 2018年
 
-![image-20230713162035847](/home/zgs/.config/Typora/typora-user-images/image-20230713162035847.png)
+![image-20230713162035847](../image/image-20230713162035847.png)
 
 提出了一种新颖的混合检索生成强化代理（HRGR-Agent），它将填充人类先验知识的基于传统检索的方法与基于现代学习的方法相结合，以实现结构化、稳健和多样化的报告生成。 HRGR-Agent 采用分层决策程序。对于每个句子，高级检索策略模块选择从现成的模板数据库检索模板句子，或调用低级生成模块来生成新句子。 HRGR-Agent 通过强化学习进行更新，以句子级和单词级奖励为指导。实验表明，我们的方法在两个医疗报告数据集上取得了最先进的结果，生成了平衡良好的结构化句子，并对异构医疗报告内容进行了稳健的覆盖。此外，我们的模型实现了医学异常术语的最高检测精度，并提高了人类评估性能。
 
@@ -42,7 +42,7 @@
 
 3.Multimodal Recurrent Model with Attention for Automated Radiology Report Generation 2018年
 
-![image-20230713163323155](/home/zgs/.config/Typora/typora-user-images/image-20230713163323155.png)
+![image-20230713163323155](../image/image-20230713163323155.png)
 
 模型以递归方式将卷积神经网络（CNN）与长短时记忆（LSTM）相结合。它不仅能够产生高水平的结论性印象，而且能够逐句产生详细的描述性发现来支持结论。我们提出了一种新的循环生成模型，以逐句生成结果，其中后续句子以多模式输入为条件，包括其前一句和原始图像，我们为我们提出的多模式模型采用注意机制来提高性能。
 
